--- a/build.properties
+++ b/build.properties
@@ -11,7 +11,7 @@ ${params};\n\r\
 ${xmlt};\n\r\
 ${xmlt4jpa};\n\r\
 ${tests};\n\r\
-${hibernate_storage};\n\r\
+${hibernate_db};\n\r\
 ${user_geronimo_ejb_3_1};\n\r\
 ${user_geronimo_jpa_2};\n\r\
 ${user_hsqldb_1_8_jar};\n\r\
