--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,9 @@
 buildname=i_db_tests
 
+build_manifest_name=/org/adligo/i/db
+build_manifest_extension_name=org.adligo.i.db
+build_manifest_implementation_title=org.adligo.i.db
+
 build_classpath=${user_junit_4plus};\n\r\
 ${adi};\n\r\
 ${adig};\n\r\
