--- a/build.properties
+++ b/build.properties
@@ -5,8 +5,8 @@ build_manifest_extension_name=org.adligo.i.db
 build_manifest_implementation_title=org.adligo.i.db
 
 build_classpath=${user_junit_4plus};\n\r\
-${adi};\n\r\
-${adig};\n\r\
+${i_adi};\n\r\
+${i_adig};\n\r\
 ${i_util};\n\r\
 ${i_log};\n\r\
 ${i_db};\n\r\
