Adding to project group.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>i_db_tests</name>
+	<name>i_db_tests.adligo.org</name>
 	<comment></comment>
 	<projects>
 	</projects>
