--- a/.classpath
+++ b/.classpath
@@ -4,13 +4,13 @@
 	<classpathentry kind="src" path="src_runtime"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_log"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jse_util"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_log.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_util.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jse_util.adligo.org"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tests"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/xmlt"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/params"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_db"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/params.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_db.adligo.org"/>
 	<classpathentry kind="var" path="MVN_REPO/commons-dbcp/commons-dbcp/1.4/commons-dbcp-1.4.jar"/>
 	<classpathentry kind="var" path="MVN_REPO/commons-pool/commons-pool/1.6/commons-pool-1.6.jar"/>
 	<classpathentry kind="var" path="MVN_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
@@ -27,7 +27,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/xmlt4jpa"/>
 	<classpathentry kind="var" path="MVN_REPO/hsqldb/hsqldb/1.8.0.7/hsqldb-1.8.0.7.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/hibernate_db"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_adi"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/i_adig"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_adi.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/i_adig.adligo.org"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
